--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="description">Description</string>
     <string name="_05_02_2021">05.02.2021</string>
     <string name="content_description">News image</string>
+    <string name="text_retry">Retry</string>
 </resources>
