--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">NewsFeed</string>
-    <string name="empty_text">Click the load icon to add items</string>
+    <string name="empty_text">Click the reload icon to add items</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="_05_02_2021">05.02.2021</string>
     <string name="content_description">News image</string>
     <string name="text_retry">Retry</string>
-    <string name="load">Load</string>
-    <string name="delete">Delete</string>
+    <string name="load">Reload</string>
 </resources>
