--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="content_description">News image</string>
     <string name="text_retry">Retry</string>
     <string name="load">Reload</string>
+    <string name="snackbar_retry">Retry</string>
+    <string name="snackBarLoading">Loading</string>
 </resources>
