Menu with submenu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="snackbar_retry">Retry</string>
     <string name="snackBarLoading">Loading</string>
     <string name="retry">Retry</string>
+    <string name="developer_options">Developer options</string>
 </resources>
