--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="developer_options">Developer options</string>
     <string name="error_429">HTTP 429 - Too many requests</string>
     <string name="error_426">HTTP 426 - Upgrade required</string>
+    <string name="error_401">HTTP 401 - Unauthorized</string>
 </resources>
